feat: 全面功能完善 — i18n、代码分析、UI优化
前端改动:
- i18n 国际化系统 (zh-CN/en-US)，设置界面
- 代码/AST 功能仅对代码文件启用
- 解释块流式输出修复 (SSE segment index 追踪)
- Markdown 文件左预览右源码分栏
- 非代码文件适配渲染 (图片预览、文本显示)
- 概览模块点击定位到 sidebar (focusPath 自动展开)
- Modules 层级路径分段显示
- 解释块与代码顶部对齐
- 代码区域滚动修复
- Sidebar 文件排序 (文件夹优先+名称排序)
- timeAgo 函数修复 commits 面板
- GitHub 导入、提交记录、AI 对话、依赖图
- 搜索弹窗、虚拟代码滚动、文件树状态标记

后端改动:
- 结构分析缓存 (Project.structureAnalysis 字段)
- 自动后台分析 (AutoAnalysisService)
- 源码文件筛选 (analyzable 字段)
- 文件树排序
- 解释缓存服务、质量评估
- GitHub 导入、Git 提交查看、AI 对话
- AST 解析、依赖分析、RAG 索引